--- a/birthday-users-admin-css.css
+++ b/birthday-users-admin-css.css
@@ -5,6 +5,10 @@
 #icon-wp-birthday-users {
 	background: transparent url(images/birthday-admin-icon.png) no-repeat;
 }
+.rebuild {
+  padding-left: 20px;
+  font-size: small;
+}
 h4 {
   margin: 5px;
   padding: 2px;
