--- a/birthday-users-admin-css.css
+++ b/birthday-users-admin-css.css
@@ -26,6 +26,12 @@ h4 {
   display:inline-block;
   padding: 0 0 2px 20px;
 }
+.protected  {
+  background: transparent url(images/protected.png) 0 0px no-repeat;
+  background-position: right;
+  display:inline-block;
+  padding: 0 28px 0 2px;
+}
 table {
   padding: 5px;
 }
